# csa-lab3

./: .coverage  README.md  golden_test.py  pyproject.toml  simulation.py  translator.py  utility.py
.github/.workflows/: ci.yml
.github/workflows/: ci.yml
asm_programs/: cat.asm  cat.sasm  hello.asm  hello.sasm  hello_username.asm  math.asm  prob1.asm
golden_tests/: cat_golden.yml  hello_golden.yml  hello_username_golden.yml  prob1_golden.yml
machine_codes/: cat.json  hello.json  hello_username.json  math.json  prob1.json
processor/: isa.py  machine.py  signals.py
translator/: translator.py  utility.py
