[tool.poetry]
name = "csa-lab3"
version = "0.1.0"
description = ""
authors = ["Podolskiy Vyacheslav <slava.css14@bk.ru>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.0"
mypy = "^1.10.0"
ruff = "^0.4.0"
pytest = "^8.2.0"
pytest-golden = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
addopts = "--doctest-modules"
log_format = "%(levelname)-7s %(module)s:%(funcName)-13s %(message)s"
